[package]
name = "github-backup"
version = "0.2.0"
edition = "2021"
authors = ["Max van der Schee <hello@maxvanderschee.nl>"]
license = "MIT"
description = "Program to back up all repositories from GitHub."
readme = "README.md"
homepage = "https://github.com/mvdschee/github-backup"
repository = "https://github.com/mvdschee/github-backup"
keywords = ["cli", "github", "backup"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.44"
dotenv = "0.15.0"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
